syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/jithinlal/simplebank/pb";

message CreateAccountRequest {
  string currency = 1;
}

message CreateAccountResponse {
  Account account = 1;
}
